fix spacing issue on iphones

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -162,8 +162,8 @@ h1 {
 }
 
 .iconbutton.attach {
-    margin-left: 3%;
-    margin-right: 1%;
+    /* margin-left: 3%; */
+    /* margin-right: 1%; */
 }
 
 .iconbutton.emoji {
